# boilerplate_vk

./: .gitignore  CMakeLists.txt  PLAN.md  README.md  build.ps1  conanfile.py  git_add_dry.ps1  git_autopush_main.ps1  run.ps1  vcpkg.json
.github/workflows/: ci.yml  ci.yml.bak  release.yml
shaders/: shader.frag  shader.vert
src/: Mesh.cpp  Mesh.h  VulkanApp.cpp  VulkanApp.h  VulkanException.h  VulkanWrapper.h  main.cpp
